--- a/src/main/webapp/i18n/vi/review.json
+++ b/src/main/webapp/i18n/vi/review.json
@@ -21,9 +21,8 @@
       "point": "Point",
       "userReviewId": "User Review Id",
       "type": "Type",
-      "startDate": "Start Date",
-      "endDate": "End Date",
-      "ppplicationUser": "Ppplication User"
+      "status": "Status",
+      "applicationUser": "Application User"
     }
   }
 }
